# pathpilot

./: .gitignore  LICENSE  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: ActionBar.tsx  CustomTitlebar.tsx  PathInput.tsx  SettingsBar.tsx  ToastContainer.tsx
src/hooks/: useToast.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  zh.json
src/stores/: settingsStore.ts
